--- a/inventoryproject/templates/base.html
+++ b/inventoryproject/templates/base.html
@@ -2,19 +2,16 @@
 <html lang='en'>
     <head>
 
-        <title> Itinerary </title>
+        <title> Inventory </title>
         {% load staticfiles %}
         <link href="{% static '/styles.css' %}" rel="stylesheet">
-    
-    <!--   <link href="../static/styles.css" rel='stylesheet'> -->
-   
+       
     </head>
     
-     <h1> Inventory </h1> 
+     <h1> Inventory Service </h1> 
         
     <body> 
         {% block content %}
-
 
         {% endblock %} 
     </body>
